tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/legacy-vector-typed-memory-access.wyst
module legacy_vector_typed_memory

fn bad(address: @[u32:4]) -> [u32:4] {
    return [u32:4]@[address]
}
